<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <CheckBoxPreference android:key="sync_enabled" android:title="@string/title_sync_enabled" android:defaultValue="true"/>
  <PreferenceScreen android:title="@string/title_sync" android:key="sync"/>
  <PreferenceCategory android:title="@string/title_category_auth">
    <EditTextPreference android:key="customer_nr"
                        android:title="@string/title_customer_nr"
                        android:summary="@string/summary_customer_nr"
                        android:inputType="number"
                        android:maxLength="8"

        />
      <EditTextPreference android:key="customer_email"
                          android:title="@string/title_customer_firstname"
                          android:summary="@string/summary_customer_firstname"
                          android:inputType="textCapWords"
          />
      <EditTextPreference android:key="customer_email"
                          android:title="@string/title_customer_lastname"
                          android:summary="@string/summary_customer_lastname"
                          android:inputType="textCapWords"
          />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/title_category_options">
    <CheckBoxPreference android:key="sync_3g" android:title="@string/title_options_sync_3g" android:defaultValue="false"/>
    <CheckBoxPreference android:key="sync_wifi" android:title="@string/title_options_sync_wifi" android:defaultValue="true"/>
  </PreferenceCategory>
</PreferenceScreen>